...
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetMarket">

            <ImageView
                android:id="@+id/arrow1"
                style="@style/array_style"
                android:contentDescription="@string/description_arrow" />

            <ImageView
                android:id="@+id/arrow2"
                style="@style/array_style"
                android:contentDescription="@string/description_arrow" />

            <ImageView
                android:id="@+id/arrow3"
                style="@style/array_style"
                android:contentDescription="@string/description_arrow" />

            <ImageView
                android:id="@+id/arrow4"
                style="@style/array_style"
...
            <ImageView
                android:id="@+id/box04"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box05"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

        </LinearLayout>

        <LinearLayout
...
            <ImageView
                android:id="@+id/box08"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box09"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box10"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box11"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

        </LinearLayout>

        <LinearLayout
...
            <ImageView
                android:id="@+id/box14"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box15"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box16"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

            <ImageView
                android:id="@+id/box17"
                style="@style/boxes_style"
                android:contentDescription="@string/description_box" />

        </LinearLayout>

        <LinearLayout
...
